--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
 :root {
     --base-color: #141f1f;
     --text-color: rgb(207, 188, 153);
+    --bold-color: rgb(191, 97, 88);
   }
 
 /* || GENERAL STYLES */
@@ -15,6 +16,10 @@ body {
 p {
     text-align: justify;
     line-height: 1.3;
+}
+
+strong {
+    color: var(--bold-color);
 }
 
 a:link {
