--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 /* Variables definition */
 :root {
     --base-color: #141f1f;
-    --text-color: rgb(157, 191, 88);
+    --text-color: green;
     --bold-color: rgb(191, 97, 88);
   }
 
