--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
 :root {
     --base-color: #141f1f;
     --text-color: olive;
-    --bold-color: rgb(191, 97, 88);
+    --bold-color: brown;
   }
 
 /* || GENERAL STYLES */
