--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
 :root {
     --base-color: #141f1f;
     --text-color: olive;
-    --bold-color: brown;
+    --bold-color: green;
   }
 
 /* || GENERAL STYLES */
