--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,10 @@ body {
     font-family: 'Times New Roman', Times, serif; 
 }
 
+section {
+    margin-bottom: 50px;
+}
+
 p {
     text-align: justify;
     line-height: 1.3;
