--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,10 +20,12 @@ section {
 p {
     text-align: justify;
     line-height: 1.3;
+    display: block;
 }
 
 h3 {
     color:brown;
+    display: block;
 }
 
 strong {
