--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,13 +67,14 @@ a:visited {
 .container {
     padding-bottom: 10px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 .center {
-    position: absolute;
+    position: relative;
     left: 50%;
     transform: translateX(-50%);
-    padding-bottom: 20px;
+    padding-bottom: 5px;
 }
 .right {
     margin-left: auto;
