--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,3 +79,32 @@ a:visited {
 .right {
     margin-left: auto;
 }
+
+/*
+ * Styles for mathematical expression placeholder elements.
+ * Makes the element behave like a block but flow inline with the text.
+ */
+.math-inline-block {
+    display: inline-block;
+}
+
+/* Introductory paragraph with reduced bottom margin, before an ul element */
+.intro-paragraph { 
+    margin-bottom: 5px; /* O el valor que desees, por ejemplo, 0px si quieres que sea mínimo */
+}
+
+/*
+ * Styles for the coordinate-to-magnitude-direction calculation form.
+ * This rule initially hides the form.
+ */
+#coordToMagDir {
+    display: none;
+}
+
+/*
+ * Styles for canvas elements.
+ * Applies a grey border to the canvas.
+ */
+.canvas-border {
+    border: 1px solid grey;
+}
