--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,3 +108,25 @@ a:visited {
 .canvas-border {
     border: 1px solid grey;
 }
+
+/* Estiles for table type 1 */
+.table-type1 {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    text-align: center;
+}
+
+.table-type1 th, 
+.table-type1 td {
+    border: 1px solid #333;
+    padding: 12px;
+}
+
+/* caption located at table bottom */
+.table-type1 caption {
+    caption-side: bottom;
+    padding-top: 10px;
+    font-style: italic;
+    color: #555;
+}
