--- a/src/components/VectorCanvas.astro
+++ b/src/components/VectorCanvas.astro
@@ -5,10 +5,10 @@ const { id, viewBox = "0 0 400 400", width = "100%", height = "400" } = Astro.pr
 <svg id={id} viewBox={viewBox} width={width} height={height}></svg>
 
 <script>
-    import { geometryDrawings } from '../scripts/pages/geometryPage.ts';
-    import { vectorsDrawings } from '../scripts/pages/vectorsPage.js';
-    import { testDrawings } from '../scripts/pages/testPage.ts';
-    import { ensureSharedMarkerDefs } from '../scripts/core/SVGDrawing.js';
+    import { geometryDrawings } from '../scripts/pages/geometryPage';
+    import { vectorsDrawings } from '../scripts/pages/vectorsPage';
+    import { testDrawings } from '../scripts/pages/testPage';
+    import { ensureSharedMarkerDefs } from '../scripts/core/SVGDrawing';
 
     // Declarar MathJax para evitar errores de TypeScript (se carga globalmente)
     declare const MathJax: any;
